# HerkuleX-ROS-Package

./: 200311a-HerkuleX ROS Package Manual.docx  HerkuleX.rules  README.md
HerkuleX/: CMakeLists.txt  package.xml
HerkuleX/launch/: HerkuleX.launch  HerkuleX_6DOF_demo.launch  HerkuleX_Pantilt_facetracking.launch  HerkuleX_pantilt_Manual_control.launch
HerkuleX/msg/: HerkuleX_Info_EEP.msg  HerkuleX_Info_RAM.msg  MsgHerkuleX_EEP.msg  MsgHerkuleX_RAM.msg
HerkuleX/src/: HerkuleX_12DOF_Robot_node.cpp  HerkuleX_6DOF_Arm_node.cpp  HerkuleX_PanTilt_node.cpp  HerkuleX_feedback_Test_node.cpp  HerkuleX_node.cpp  HerkuleX_node.h
HerkuleX/srv/: HerkuleX_IJOG_Move.srv  HerkuleX_PositionMove.srv  HerkuleX_RegisterCommand.srv  HerkuleX_SJOG_Move.srv  HerkuleX_VelocityMove.srv
HerkuleX_description/: CMakeLists.txt  package.xml
HerkuleX_description/launch/: HerkuleX_Arm_Control_moveit.launch  HerkuleX_Arm_Manual_Control.launch  HerkuleX_Arm_display.launch  HerkuleX_pantilt_Control.launch  HerkuleX_pantilt_display.launch
HerkuleX_description/meshes/: DRB_0004.stl  DRB_0005.stl  DRB_0009.stl  DRJ_0001.stl  DRS_0101.stl  gripper.stl  horn.stl
HerkuleX_description/meshes/gripper/: gripper-bottom-cover.stl  gripper-bottom.stl  gripper-left.stl  gripper-link1.stl  gripper-link2.stl  gripper-right.stl
HerkuleX_description/rviz/: HerkuleX.rviz
HerkuleX_description/urdf/: HerkuleX_Arm.xacro  HerkuleX_PanTilt.xacro  materials.xacro
moveit_6DOF_Arm/: .setup_assistant  CMakeLists.txt  README.md  package.xml
moveit_6DOF_Arm/config/: HerkuleX.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
moveit_6DOF_Arm/launch/: HerkuleX_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
