<?xml version="1.0"?>
<package>
  <name>HerkuleX</name>
  <version>0.0.1</version>
  <description>HerkuleX Package with ROS serial</description>

  <author email="wbjin@hyulimrobot.com">wbjin</author>

  <maintainer email="wbjin@hyulimrobot.com">wbjin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
